2013-11-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/58771
	* gfortran.dg/derived_external_function_1.f90 : New test

2013-11-02  Janus Weil  <janus@gcc.gnu.org>

	Backport from mainline
	2013-09-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58355
	* gfortran.dg/extends_15.f90: New.

2013-10-28  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/arm/require-pic-register-loc.c: New test.

2013-10-28  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/arm/require-pic-register-loc.c: New test.

2013-10-26  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-10-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/58779
	* gcc.target/i386/pr30315.c: Remove MINUSCC, DECCC, MINUSCCONLY
	and MINUSCCZEXT defines. Update scan-assembler dg directive.
	* gcc.dg/torture/pr58779.c: New test.

2013-10-25  Richard Henderson  <rth@redhat.com>

	PR rtl/58542
	* gcc.dg/atomic-store-6.c: New.

2013-10-25  Tom de Vries  <tom@codesourcery.com>

	PR c++/58282
	* g++.dg/tm/noexcept-6.C: New test.

2013-10-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/pr58831.c: New test.

2013-10-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58633
	* g++.dg/cpp0x/decltype57.C: New.
	* g++.dg/cpp0x/enum18.C: Revert r174385 changes.

2013-09-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt28.ad[sb]: New test.
	* gnat.dg/opt28_pkg.ads: New helper.

2013-09-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/in_out_parameter4.adb: New test.

2013-08-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization16.adb: New test.
	* gnat.dg/loop_optimization16_pkg.ad[sb]: New helper.

2013-08-13  Marek Polacek  <polacek@redhat.com>

	Backport from 4.8:
	2013-08-13  Marek Polacek  <polacek@redhat.com>

	PR tree-optimization/57980
	* gcc.dg/pr57980.c: New test.

2013-08-11  Janus Weil  <janus@gcc.gnu.org>

	Backport from trunk:
	2013-08-09  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58058
	* gfortran.dg/transfer_intrinsic_6.f90: New.
